[gd_scene load_steps=13 format=3 uid="uid://2yorwfd6e22a"]

[ext_resource type="Script" path="res://scripts/tiendaUI.gd" id="1_ddi48"]
[ext_resource type="Texture2D" uid="uid://365133lfbs1q" path="res://imagenes/TiendaFondo.webp" id="3_nvvqx"]
[ext_resource type="Texture2D" uid="uid://c3s7lqxwkbg1i" path="res://imagenes/tendero.png" id="4_r78bd"]
[ext_resource type="AudioStream" uid="uid://ce5s0ogdruitm" path="res://Musica/batalla remix con shin.mp3" id="5_1qvw3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0yq0"]
bg_color = Color(0, 0, 0, 0.72549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m36hl"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3e2cj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0413b"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Animation" id="Animation_m6dg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contenedorNPC/villano:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vmf4b"]
resource_name = "enemigoDañado"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contenedorNPC/villano:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a14po"]
resource_name = "jugadorDañado"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-51, -21), Vector2(60, 28), Vector2(60, 28), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdk7x"]
_data = {
"RESET": SubResource("Animation_m6dg7"),
"enemigoDañado": SubResource("Animation_vmf4b"),
"jugadorDañado": SubResource("Animation_a14po")
}

[node name="tiendaUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddi48")

[node name="fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nvvqx")
expand_mode = 3

[node name="contenedorNPC" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.718
anchor_top = 0.5
anchor_right = 0.718
anchor_bottom = 0.5
offset_left = 36.864
offset_top = -97.0
offset_right = 316.864
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2

[node name="villano" type="TextureRect" parent="contenedorNPC"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("4_r78bd")
stretch_mode = 2

[node name="panelAcciones" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 23.0
offset_top = 103.0
offset_right = -355.0
offset_bottom = 422.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v0yq0")

[node name="objetosArriba" type="HBoxContainer" parent="panelAcciones"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 54.0
offset_right = -30.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="objeto1" type="Button" parent="panelAcciones/objetosArriba"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_m36hl")
theme_override_styles/hover = SubResource("StyleBoxFlat_3e2cj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3e2cj")
text = "OBJETO 1"

[node name="objeto2" type="Button" parent="panelAcciones/objetosArriba"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_m36hl")
theme_override_styles/hover = SubResource("StyleBoxFlat_3e2cj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3e2cj")
text = "OBJETO 2"

[node name="objetosAbajo" type="HBoxContainer" parent="panelAcciones"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 179.0
offset_right = -30.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="objeto3" type="Button" parent="panelAcciones/objetosAbajo"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_m36hl")
theme_override_styles/hover = SubResource("StyleBoxFlat_3e2cj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3e2cj")
text = "OBJETO 3"

[node name="objeto4" type="Button" parent="panelAcciones/objetosAbajo"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_m36hl")
theme_override_styles/hover = SubResource("StyleBoxFlat_3e2cj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3e2cj")
text = "OBJETO 4"

[node name="textBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 11.0
offset_top = 497.0
offset_right = -7.0
offset_bottom = 638.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0413b")

[node name="Label" type="Label" parent="textBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 10.0
offset_right = -19.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
text = "Esta es la tienda. Pulsa un objeto para comprarlo por 10 monedas, ¡TODO UN CHOLLO!"

[node name="siguiente" type="Label" parent="textBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1095.0
offset_top = 105.0
offset_right = -19.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = ">>"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qdk7x")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1qvw3")
autoplay = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = 116.0
offset_right = 759.0
offset_bottom = 147.0
text = "SALIR"

[connection signal="pressed" from="panelAcciones/objetosArriba/objeto1" to="." method="_on_objeto_1_pressed"]
[connection signal="pressed" from="panelAcciones/objetosArriba/objeto1" to="." method="_on_golpear_pressed"]
[connection signal="pressed" from="panelAcciones/objetosArriba/objeto2" to="." method="_on_objeto_2_pressed"]
[connection signal="pressed" from="panelAcciones/objetosArriba/objeto2" to="." method="_on_bloquear_pressed"]
[connection signal="pressed" from="panelAcciones/objetosArriba/objeto2" to="." method="_on_especial_pressed"]
[connection signal="pressed" from="panelAcciones/objetosAbajo/objeto3" to="." method="_on_golpear_pressed"]
[connection signal="pressed" from="panelAcciones/objetosAbajo/objeto3" to="." method="_on_objeto_3_pressed"]
[connection signal="pressed" from="panelAcciones/objetosAbajo/objeto4" to="." method="_on_bloquear_pressed"]
[connection signal="pressed" from="panelAcciones/objetosAbajo/objeto4" to="." method="_on_especial_pressed"]
[connection signal="pressed" from="panelAcciones/objetosAbajo/objeto4" to="." method="_on_objeto_4_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
